WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147395
[GTK] Missing casts in BrowserWindow.c
https://bugs.webkit.org/show_bug.cgi?id=147395
Summary
[GTK] Missing casts in BrowserWindow.c
Michael Catanzaro
Reported
2015-07-28 18:45:33 PDT
../../Tools/MiniBrowser/gtk/BrowserWindow.c:817:22: warning: incompatible pointer types assigning to 'GtkWidget *' (aka 'struct _GtkWidget *') from 'GtkToolItem *' (aka 'struct _GtkToolItem *') [-Wincompatible-pointer-types] window->boldItem = item; ^ ~~~~ ../../Tools/MiniBrowser/gtk/BrowserWindow.c:824:24: warning: incompatible pointer types assigning to 'GtkWidget *' (aka 'struct _GtkWidget *') from 'GtkToolItem *' (aka 'struct _GtkToolItem *') [-Wincompatible-pointer-types] window->italicItem = item; ^ ~~~~ ../../Tools/MiniBrowser/gtk/BrowserWindow.c:831:27: warning: incompatible pointer types assigning to 'GtkWidget *' (aka 'struct _GtkWidget *') from 'GtkToolItem *' (aka 'struct _GtkToolItem *') [-Wincompatible-pointer-types] window->underlineItem = item; ^ ~~~~ ../../Tools/MiniBrowser/gtk/BrowserWindow.c:839:31: warning: incompatible pointer types assigning to 'GtkWidget *' (aka 'struct _GtkWidget *') from 'GtkToolItem *' (aka 'struct _GtkToolItem *') [-Wincompatible-pointer-types] window->strikethroughItem = item; ^ ~~~~
Attachments
Patch
(2.70 KB, patch)
2015-07-28 20:10 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2015-07-28 20:10:58 PDT
Created
attachment 257727
[details]
Patch
WebKit Commit Bot
Comment 2
2015-07-28 23:48:39 PDT
Comment on
attachment 257727
[details]
Patch Clearing flags on attachment: 257727 Committed
r187541
: <
http://trac.webkit.org/changeset/187541
>
WebKit Commit Bot
Comment 3
2015-07-28 23:48:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug