[GTK] Missing casts in BrowserWindow.c https://bugs.webkit.org/show_bug.cgi?id=147395

Reviewed by Carlos Garcia Campos.

* MiniBrowser/gtk/BrowserWindow.c:
(browserWindowSetupEditorToolbar):


Canonical link: https://commits.webkit.org/165490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187541 268f45cc-cd09-0410-ab3c-d52691b4dbfc